.provarCaches/00D5f000005vwGkEAI/objects/rstk__ttapline__c.object
<CustomObject>
    <description>ttapline__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>null</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_account__c</fullName>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_acctdesc__c</fullName>
        <label>Account Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_batchno__c</fullName>
        <inlineHelpText>The Batch Number that this Payables line is contained within.</inlineHelpText>
        <label>Batch No</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_didvatcalc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether VAT Calculation was performed for this Line</inlineHelpText>
        <label>VAT Calculation Performed for this Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_dim1__c</fullName>
        <inlineHelpText>This is the General Ledger Dimension 1 associated with the Invoice Line</inlineHelpText>
        <label>GL Dimension 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_dim2__c</fullName>
        <inlineHelpText>This is the General Ledger Dimension 2 associated with the Invoice Line</inlineHelpText>
        <label>GL Dimension 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_dim3__c</fullName>
        <inlineHelpText>This is the General Ledger Dimension 3 associated with the Invoice Line</inlineHelpText>
        <label>GL Dimension 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_dimvals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension Values</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>ttaplines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_general_ledger_account__c</fullName>
        <inlineHelpText>This is the General Ledger Account associated with the Invoice Line</inlineHelpText>
        <label>General Ledger Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_input_vat_code__c</fullName>
        <inlineHelpText>This is the Value Added Tax code for this Invoice Line</inlineHelpText>
        <label>VAT Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_isrcptline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicator is set if this detail record is the actual &apos;Received&apos; item from the PO Receipt.</inlineHelpText>
        <label>Is Receipt Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_line_description__c</fullName>
        <inlineHelpText>This is the description of this Invoice Line</inlineHelpText>
        <label>Line Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_netvalue__c</fullName>
        <inlineHelpText>This is the total net value of the detail line of this match record.</inlineHelpText>
        <label>Net Value - Home Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_netvaluemcurr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Net Value – Maintenance Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_netvaluevcurr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Net Value – Vendor Currency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the project associated with this Invoice Line</inlineHelpText>
        <label>Project Master</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>ttaplines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_pjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the Project Charge (Job) Code associated with this Invoice Line</inlineHelpText>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>ttaplines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_popricevariance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PO Price Variance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_porcptap__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The PO Receipt that spawned this Payables record.</inlineHelpText>
        <label>PO Receipt Transaction</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>porcptaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_rcptexchangeratevariance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Receipt Exchange Rate Variance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_rcptqtyvariance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Receipt Qty Variance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_syacc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Mfg Account (aka Sub Ledger Account) debited by this Payables invoice.</inlineHelpText>
        <label>Manufacturing Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>ttaplines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_sydatad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The System Transaction Object Detail record corresponding to the Invoice Line.</inlineHelpText>
        <label>System Transaction Object Detail</label>
        <referenceTo>rstk__sydatad__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>ttaplines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_syvatclass__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>VAT Class for Purchase Order Receipts, Variances and Manual Transactions</inlineHelpText>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>ttaplines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_taxrate1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Tax Rate for this PO-AP Match detail line, used to calculate the Tax Value for this record.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_taxratetotal__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Tax Rate for this record, if more than one Tax Rate applies (not currently supported)</inlineHelpText>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_taxvalue1__c</fullName>
        <inlineHelpText>Tax value for this PO-AP Match detail line, calculated using the Tax Value for this record.</inlineHelpText>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_taxvalue1mcurr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Value (Maint Currency)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_taxvalue1vcurr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tax Value (Vendor Currency)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_taxvaluetotal__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Tax Value for this record, if more than one Tax Rate applies (not currently supported)</inlineHelpText>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_ttaphdr__c</fullName>
        <inlineHelpText>This is the Invoice Header number  which this PO-AP Match record is included in.</inlineHelpText>
        <label>Invoice Header</label>
        <referenceTo>rstk__ttaphdr__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_vataddedtoamt__c</fullName>
        <label>VAT added to Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_vatincludedinamt__c</fullName>
        <label>VAT Included in Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_vatnotinpoprice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PO Price Excludes VAT</description>
        <inlineHelpText>When checked, VAT charges will not be included in the PO Price defined on the PO Line. When unchecked, the expectation is that the VAT cost is incorporated into the PO Price.</inlineHelpText>
        <label>PO Price Excludes VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_vatpct__c</fullName>
        <description>VAT Percent</description>
        <inlineHelpText>The percent of VAT charged.</inlineHelpText>
        <label>VAT Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__ttapline_vatrecoveryrate__c</fullName>
        <description>VAT Recovery Percent</description>
        <inlineHelpText>The percent of VAT charged that will be recovered.</inlineHelpText>
        <label>VAT Recovery Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Invoice Line</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_InvoiceLines</fullName>
        <columns>NAME</columns>
        <columns>rstk__ttapline_dim1__c</columns>
        <columns>rstk__ttapline_dim2__c</columns>
        <columns>rstk__ttapline_dim3__c</columns>
        <columns>rstk__ttapline_dim4__c</columns>
        <columns>rstk__ttapline_batchno__c</columns>
        <columns>rstk__ttapline_ttaphdr__c</columns>
        <columns>rstk__ttapline_line_description__c</columns>
        <columns>rstk__ttapline_porcptap__c</columns>
        <columns>rstk__ttapline_general_ledger_account__c</columns>
        <columns>rstk__ttapline_syacc__c</columns>
        <columns>rstk__ttapline_netvalue__c</columns>
        <columns>rstk__ttapline_netvaluemcurr__c</columns>
        <columns>rstk__ttapline_netvaluevcurr__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Invoice Lines</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__TT_AP_Line</fullName>
        <columns>NAME</columns>
        <columns>rstk__ttapline_batchno__c</columns>
        <columns>rstk__ttapline_ttaphdr__c</columns>
        <columns>rstk__ttapline_line_description__c</columns>
        <columns>rstk__ttapline_general_ledger_account__c</columns>
        <columns>rstk__ttapline_syacc__c</columns>
        <columns>rstk__ttapline_netvalue__c</columns>
        <columns>rstk__ttapline_netvaluemcurr__c</columns>
        <columns>rstk__ttapline_netvaluevcurr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__ttapline_dim1__c</columns>
        <columns>rstk__ttapline_dim2__c</columns>
        <columns>rstk__ttapline_dim3__c</columns>
        <columns>rstk__ttapline_dim4__c</columns>
        <filterScope>Everything</filterScope>
        <label>TT AP Line</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Invoice Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>